# forklift

./: .gitignore  Cargo.toml  quick_based.sh  quick_build_source.sh
assets/prompts/: assistant_system_prompt.hbs
assets/settings/: default.json
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/: Cargo.toml
crates/agent/src/: thread.rs
crates/agent_settings/src/: agent_settings.rs
crates/assistant/src/: assistant_panel.rs  context.rs  context_store.rs  inline_assistant.rs  prompt_library.rs  slash_command.rs  slash_command_picker.rs  terminal_inline_assistant.rs
crates/assistant2/src/: active_thread.rs  assistant_panel.rs  context_picker.rs  message_editor.rs  thread.rs  thread_history.rs
crates/assistant_context_editor/src/: language_model_selector.rs
crates/assistant_settings/: Cargo.toml
crates/assistant_settings/src/: assistant_settings.rs
crates/assistant_tools/src/: assistant_tools.rs  batch_tool.rs  code_action_tool.rs  code_symbols_tool.rs  contents_tool.rs  copy_path_tool.rs  create_directory_tool.rs  create_file_tool.rs  delete_path_tool.rs  diagnostics_tool.rs  edit_file_tool.rs  fetch_tool.rs  find_path_tool.rs  grep_tool.rs  list_directory_tool.rs  now_tool.rs  (+12 more)
crates/deepseek/: Cargo.toml
crates/deepseek/src/: deepseek.rs
crates/language_model/: Cargo.toml
crates/language_models/: Cargo.toml
crates/litellm/: Cargo.toml
crates/open_aux/: Cargo.toml
crates/open_aux/src/: open_aux.rs
crates/open_router/: Cargo.toml  README.md  test_build.sh
crates/tensor_zero/: Cargo.toml  README.md
crates/zed/: Cargo.toml
(+254 files in other folders)
