[package]
name = "deepseek"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
gpui = { path = "../gpui" }
language = { path = "../language" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
settings = { path = "../settings" }
theme = { path = "../theme" }
ui = { path = "../ui" }
util = { path = "../util" }
workspace = { path = "../workspace" }
