[package]
name = "open_aux"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/open_aux.rs"

[features]
default = []
schemars = ["dep:schemars"]

[dependencies]
anyhow.workspace = true
futures.workspace = true
http_client.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }